Small design fixes for map pages (#349)
Made a couple small improvements and clean-up changes to the map pages:

- Parking map: set bicycle network to appear underneath road labels for the parking map so that road labels remain visible
- Parking and LTS maps: Ensure that the correct road labels layer name is used depending on whether the base layers are from maptiler or fallback base map style
- Parking map: previously, the "select on map" button in a parking feature description would not center the feature on the map and would become disabled when the feature was selected. Now the button centers the feature on the map and changes to "center on map" when the feature is already selected.
- Submission dashboard: prevent long words (e.g. URLs) in comment text from breaking layout

--- a/bikespace_frontend/src/components/dashboard/map-popup/map-popup.module.scss
+++ b/bikespace_frontend/src/components/dashboard/map-popup/map-popup.module.scss
@@ -2,6 +2,15 @@
 
 .popup {
   font-family: $body-font-stack;
+
+  // prevent long words (e.g. urls) from breaking the layout
+  p {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    // specific fix for Safari on iOS
+    // unlikely that this is needed, since the viewport would have to be full-screen size to show pop-ups, but just in case (e.g. big iPads)
+    word-break: break-word;
+  }
 }
 
 .submissionId {
