--- a/bikespace_frontend/src/components/map-layers/parking/parking-feature-description/parking-feature-description.module.scss
+++ b/bikespace_frontend/src/components/map-layers/parking/parking-feature-description/parking-feature-description.module.scss
@@ -55,7 +55,7 @@
     flex-basis: 100%;
     border: 2px solid $color-primary-20p;
     height: 2rem * 0.9;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
   }
 }
 
